--- a/package.json
+++ b/package.json
@@ -9,19 +9,40 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-separator": "^1.1.2",
+    "@radix-ui/react-slot": "^1.1.2",
+    "@react-pdf/pdfkit": "^4.0.2",
+    "@react-pdf/renderer": "^4.2.2",
+    "@types/blob-stream": "^0.1.33",
+    "@types/pdfkit": "^0.13.9",
+    "axios": "^1.7.9",
+    "blob-stream": "^0.1.3",
+    "chrome-aws-lambda": "^10.1.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "handlebars": "^4.7.8",
+    "inline-css": "^4.0.3",
+    "lucide-react": "^0.475.0",
+    "next": "15.1.7",
+    "pdfkit": "^0.16.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.1.7"
+    "react-query": "^3.39.3",
+    "react-to-print": "^3.0.5",
+    "tailwind-merge": "^3.0.1",
+    "tailwindcss-animate": "^1.0.7",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "eslint": "^9",
     "eslint-config-next": "15.1.7",
-    "@eslint/eslintrc": "^3"
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
