--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@react-pdf/pdfkit": "^4.0.2",
     "@react-pdf/renderer": "^4.2.2",
     "@types/blob-stream": "^0.1.33",
+    "@types/pdfjs-dist": "^2.10.378",
     "@types/pdfkit": "^0.13.9",
+    "@types/react-modal": "^3.16.3",
     "axios": "^1.7.9",
     "blob-stream": "^0.1.3",
     "chrome-aws-lambda": "^10.1.0",
@@ -25,11 +29,16 @@
     "inline-css": "^4.0.3",
     "lucide-react": "^0.475.0",
     "next": "15.1.7",
+    "pdfjs-dist": "^4.10.38",
     "pdfkit": "^0.16.0",
+    "promise.withresolvers": "^1.0.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-modal": "^3.16.3",
+    "react-pdf": "^9.2.1",
     "react-query": "^3.39.3",
     "react-to-print": "^3.0.5",
+    "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "zustand": "^5.0.3"
