--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
         ports:
             - '${PORT}:3000'
         volumes:
-            - ./docker-data-backend:/usr/src/app
+            - ./docker-data-frontend:/app
         environment:
             - PORT=3000
             - NEXT_PUBLIC_API_URL=http://localhost:9921
