--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
         build:
             context: .
             dockerfile: Dockerfile
-        container_name: nest-frontend
+        container_name: next-frontend
         ports:
             - '${PORT}:3000'
         volumes:
@@ -11,5 +11,3 @@ services:
         environment:
             - PORT=3000
             - NEXT_PUBLIC_API_URL=http://localhost:9921
-        depends_on:
-            - db
